changed config to require authenticated user for /products

--- a/app/staticwebapp.config.json
+++ b/app/staticwebapp.config.json
@@ -4,6 +4,10 @@
       "route": "/profile",
       "allowedRoles": ["authenticated"]
     },
+	{
+      "route": "/products,
+      "allowedRoles": ["authenticated"]
+    },
     {
       "route": "/admin/*",
       "allowedRoles": ["administrator"]
