fixed missing quote in config.json file

--- a/app/staticwebapp.config.json
+++ b/app/staticwebapp.config.json
@@ -5,7 +5,7 @@
       "allowedRoles": ["authenticated"]
     },
 	{
-      "route": "/products,
+      "route": "/products",
       "allowedRoles": ["authenticated"]
     },
     {
