set /login route to /.auth/login/google

--- a/app/staticwebapp.config.json
+++ b/app/staticwebapp.config.json
@@ -38,7 +38,7 @@
     },
     {
       "route": "/login",
-      "rewrite": "/.auth/login/github"
+      "rewrite": "/.auth/login/google"
     },
     {
       "route": "/.auth/login/twitter",
