--- a/app/staticwebapp.config.json
+++ b/app/staticwebapp.config.json
@@ -82,5 +82,17 @@
   },
   "mimeTypes": {
     ".json": "text/json"
+  },
+  "auth": {
+    "identityProviders": {
+      "azureActiveDirectory": {
+        "registration": {
+          "openIdIssuer": "https://login.microsoftonline.com/72f988bf-86f1-41af-91ab-2d7cd011db47",
+		  "clientIdSettingName": "AAD_CLIENT_ID",
+		  "clientSecretSettingName": "AAD_CLIENT_SECRET"
+		},
+	    "userDetailsClaim": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name"
+	  }
+	}
   }
 }
